Try to fix knit problem

--- a/projects/project-01/project-01-explore-babynames.Rmd
+++ b/projects/project-01/project-01-explore-babynames.Rmd
@@ -53,7 +53,7 @@ tbl_names <- readr::read_csv(
 )
 
 # Print `tbl_names`
-
+tbl_names
 ```
 
 ### Question 1: [Popular Names] What are the most popular names?
